Agrego libro "Plutus smart contracts" a bibtex

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -236,3 +236,13 @@
   year      = {2010},
   publisher = {Pearson Education}
 }
+@book{plutus-smart-contracts,
+  title     = {Plutus: Writing reliable smart contracts},
+  author    = {Br{\"{u}}njes, Lars and  Vinogradova, Polina},
+  year      = 2019,
+  publisher = {IOHK},
+  url       = {\url{https://leanpub.com/plutus-smart-contracts}},
+  abstract  = {This practical ebook is a guide to programming with the Plutus language for highly secure smart contracts on the Cardano blockchain, home of the ada cryptocurrency. Plutus is based on the Haskell functional programming language and comes complete with a full testing environment accessed via GitHub or any browser.
+               The ebook will help you get to grips with using smart contracts on a blockchain by providing real-life examples and functional sample code. Plutus: Writing Reliable Smart Contracts is the first ebook about this new and exciting language and is written by experts from IOHK, the developers of Cardano and ada.               
+               This ebook is concise and focused and uses sample scenarios to help the reader grasp the concepts of this new language. The pitch and flow of this book makes it appealing and is it easy to navigate through the samples which get progressively more complex.}
+}
