--- a/main.tex
+++ b/main.tex
@@ -114,7 +114,7 @@ Como una cadena de bloques almacena datos de manera descentralizada, es independ
 \begin{figure}
     \centering
     \includegraphics[width=0.9\textwidth]{Bloques.png}
-    \caption{Representación simplificada de los datos en un bloque de la cadena. Extraída de \href{https://docs.cardano.org/new-to-cardano/what-is-a-blockchain}{https://docs.cardano.org/new-to-cardano/what-is-a-blockchain}}\label{fig:Bloques}
+    \caption{Representación simplificada de los datos en un bloque de la cadena. Extraída de~\cite{plutus-smart-contracts}}\label{fig:Bloques}
 \end{figure}
 
 Las cadenas de bloques no solo proporcionan una base de datos inmutable y segura, sino que también actúan como un entorno funcional para realizar transacciones de fondos, crear monedas digitales y procesar transacciones complejas mediante acuerdos digitales (`smart contracts').
