--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -145,6 +145,71 @@
   year         = {2019},
   howpublished = {\url{https://cardano.org/}}
 }
+@article{CASC_competition,
+  author     = {Sutcliffe, Geoff},
+  title      = {The CADE-21 Automated Theorem Proving System Competition},
+  year       = {2008},
+  issue_date = {January 2008},
+  publisher  = {IOS Press},
+  address    = {NLD},
+  volume     = {21},
+  number     = {1},
+  issn       = {0921-7126},
+  abstract   = {The CADE ATP system competition (CASC) is an annual evaluation of fully automatic, first order Automated Theorem Proving (ATP) systems. CASC-21 was the twelfth competition in the CASC series. Twenty ATP systems and system variants competed in the various competition and demonstration divisions. An outline of the competition design, and a commentated summary of the results, are presented.},
+  journal    = {AI Commun.},
+  month      = {jan},
+  pages      = {71-81},
+  doi        = {10.5555/1365980.1365989},
+  numpages   = {11},
+  keywords   = {Competition, automated theorem proving}
+}
+@book{concrete_semantics,
+  author    = {Nipkow, Tobias and Klein, Gerwin},
+  title     = {Concrete Semantics: With Isabelle/HOL},
+  year      = {2014},
+  isbn      = {3319105418},
+  publisher = {Springer Publishing Company, Incorporated},
+  abstract  = {Part I of this book is a practical introduction to working with the Isabelle proof assistant. It teaches you how to write functional programs and inductive definitions and how to prove properties about them in Isabelles structured proof language. Part II is an introduction to the semantics of imperative languages with an emphasis on applications like compilers and program analysers. The distinguishing feature is that all the mathematics has been formalised in Isabelle and much of it is executable. Part I focusses on the details of proofs in Isabelle; Part II can be read even without familiarity with Isabelles proof language, all proofs are described in detail but informally. The book teaches the reader the art of precise logical reasoning and the practical use of a proof assistant as a surgical tool for formal proofs about computer science artefacts. In this sense it represents a formal approach to computer science, not just semantics. The Isabelle formalisation, including the proofs and accompanying slides, are freely available online, and the book is suitable for graduate students, advanced undergraduate students, and researchers in theoretical computer science and logic.}
+}
+@book{fowler2010dsl,
+  title     = {Domain-specific languages},
+  author    = {Fowler, Martin},
+  year      = {2010},
+  publisher = {Pearson Education}
+}
+@inbook{history_of_Interactive_Theorem_Proving,
+  author  = {Harrison, John and Urban, Josef and Wiedijk, Freek},
+  year    = {2014},
+  month   = {12},
+  pages   = {135-214},
+  title   = {History of Interactive Theorem Proving},
+  volume  = {9},
+  isbn    = {9780444516244},
+  journal = {Handbook of the History of Logic},
+  doi     = {10.1016/B978-0-444-51624-4.50004-6}
+}
+
+@article{Hitchhiker_amd,
+  author  = {Russinoff, David},
+  year    = {1999},
+  month   = {01},
+  pages   = {75-125},
+  title   = {A Mechanically Checked Proof of Correctness of the AMD K5 Floating Point Square Root Microcode},
+  volume  = {14},
+  journal = {Formal Methods in System Design},
+  doi     = {10.1023/A:1008669628911}
+}
+
+@inproceedings{Hitchhiker_intel,
+  author    = {Harrison, J.},
+  booktitle = {18th Annual IEEE Symposium of Logic in Computer Science, 2003. Proceedings.},
+  title     = {Formal verification at Intel},
+  year      = {2003},
+  volume    = {},
+  number    = {},
+  pages     = {45-54},
+  doi       = {10.1109/LICS.2003.1210044}
+}
 @inproceedings{implementing_financial_contracts_on_blockchain,
   author    = {Lamela Seijas, Pablo
                and Nemish, Alexander
@@ -166,6 +231,31 @@
   abstract  = {Marlowe is a DSL for financial contracts. We describe the implementation of Marlowe on the Cardano blockchain, and the Marlowe Playground web-based development and simulation environment.},
   isbn      = {978-3-030-54455-3}
 }
+@book{ML_programming_language,
+  author    = {Ullman, Jeffrey D.},
+  title     = {Elements of ML Programming},
+  year      = {1994},
+  doi       = {10.5555/180894},
+  isbn      = {0131848542},
+  publisher = {Prentice-Hall, Inc.},
+  address   = {USA}
+}
+@article{monotonicity_inference_for_hol,
+  author   = {Blanchette, Jasmin Christian
+              and Krauss, Alexander},
+  title    = {Monotonicity Inference for Higher-Order Formulas},
+  journal  = {Journal of Automated Reasoning},
+  year     = {2011},
+  month    = {Dec},
+  day      = {01},
+  volume   = {47},
+  number   = {4},
+  pages    = {369-398},
+  abstract = {Formulas are often monotonic in the sense that satisfiability for a given domain of discourse entails satisfiability for all larger domains. Monotonicity is undecidable in general, but we devised three calculi that infer it in many cases for higher-order logic. The third calculus has been implemented in Isabelle's model finder Nitpick, where it is used both to prune the search space and to soundly interpret infinite types with finite sets, leading to dramatic speed and precision improvements.},
+  issn     = {1573-0670},
+  doi      = {10.1007/s10817-011-9234-1},
+  url      = {https://doi.org/10.1007/s10817-011-9234-1}
+}
 @misc{nakamoto2008bitcoin,
   author = {Satoshi Nakamoto},
   title  = {Bitcoin: A Peer-to-Peer Electronic Cash System},
@@ -173,6 +263,17 @@
   month  = {Dec},
   note   = {Accessed: 2015-07-01},
   url    = {https://bitcoin.org/bitcoin.pdf}
+}
+@book{plutus-smart-contracts,
+  title        = {Plutus: Writing reliable smart contracts},
+  author       = {Br{\"{u}}njes, Lars and  Vinogradova, Polina},
+  year         = 2019,
+  publisher    = {IOHK},
+  url          = {\url{https://leanpub.com/plutus-smart-contracts}},
+  howpublished = {\url{https://leanpub.com/plutus-smart-contracts}},
+  abstract     = {This practical ebook is a guide to programming with the Plutus language for highly secure smart contracts on the Cardano blockchain, home of the ada cryptocurrency. Plutus is based on the Haskell functional programming language and comes complete with a full testing environment accessed via GitHub or any browser.
+                  The ebook will help you get to grips with using smart contracts on a blockchain by providing real-life examples and functional sample code. Plutus: Writing Reliable Smart Contracts is the first ebook about this new and exciting language and is written by experts from IOHK, the developers of Cardano and ada.               
+                  This ebook is concise and focused and uses sample scenarios to help the reader grasp the concepts of this new language. The pitch and flow of this book makes it appealing and is it easy to navigate through the samples which get progressively more complex.}
 }
 @incollection{pof_ouroboros,
   author     = {Aggelos Kiayias and Alexander Russell and Bernardo David and Roman Oliynykov},
@@ -192,11 +293,66 @@
   note       = {Series Title: Lecture Notes in Computer Science},
   pages      = {357--388}
 }
+@inproceedings{proof_and_disproof,
+  author = {Blanchette, Jasmin and Bulwahn, Lukas and Nipkow, Tobias},
+  year   = {2011},
+  month  = {10},
+  pages  = {12-27},
+  title  = {Automatic Proof and Disproof in Isabelle/HOL},
+  isbn   = {978-3-642-24363-9},
+  doi    = {10.1007/978-3-642-24364-6_2}
+}
+@article{proof_processing_Isabelle,
+  author  = {Wenzel, Makarius},
+  year    = {2012},
+  month   = {09},
+  pages   = {101-114},
+  title   = {Asynchronous Proof Processing with Isabelle/Scala and Isabelle/jEdit},
+  volume  = {285},
+  journal = {Electronic Notes in Theoretical Computer Science},
+  doi     = {10.1016/j.entcs.2012.06.009}
+}
+
+@inproceedings{sledgehammer_judgement_day,
+  author    = {B{\"o}hme, Sascha
+               and Nipkow, Tobias},
+  editor    = {Giesl, J{\"u}rgen
+               and H{\"a}hnle, Reiner},
+  title     = {Sledgehammer: Judgement Day},
+  booktitle = {Automated Reasoning},
+  year      = {2010},
+  doi       = {10.1007/978-3-642-14203-1_9},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {107--121},
+  abstract  = {Sledgehammer, a component of the interactive theorem prover Isabelle, finds proofs in higher-order logic by calling the automated provers for first-order logic E, SPASS and Vampire. This paper is the largest and most detailed empirical evaluation of such a link to date. Our test data consists of 1240 proof goals arising in 7 diverse Isabelle theories, thus representing typical Isabelle proof obligations. We measure the effectiveness of Sledgehammer and many other parameters such as run time and complexity of proofs. A facility for minimizing the number of facts needed to prove a goal is presented and analyzed.},
+  isbn      = {978-3-642-14203-1}
+}
+
+@techreport{SMT-LIB,
+  title       = {The smt-lib standard: Version 1.2},
+  author      = {Ranise, Silvio and Tinelli, Cesare},
+  year        = {2006},
+  institution = {Technical report, Department of Computer Science, The University of Iowa~...}
+}
+
 @inproceedings{standardized_crypto_loans,
   title     = {Standardized crypto-loans on the Cardano blockchain},
   author    = {Kondratiuk, Dmytro and Seijas, Pablo Lamela and Nemish, Alexander and Thompson, Simon},
   booktitle = {5th Workshop on Trusted Smart Contracts, Financial Cryptography and Data Security 2021},
   year      = {2021}
+}
+
+@article{tableau_provers,
+  author    = {Lawrence C. Paulson},
+  title     = {Generic automatic proof tools},
+  booktitle = {Automated reasoning and its applications: essays in
+               honor of {Larry Wos}},
+  year      = {1997},
+  isbn      = {0-262-22055-5},
+  pages     = {23--47},
+  publisher = {MIT Press},
+  address   = {Cambridge, MA, USA}
 }
 
 @inbook{The_Extended_UTXO_Model,
@@ -209,6 +365,7 @@
   doi    = {10.1007/978-3-030-54455-3_37}
 }
 
+
 @misc{Translating_and_Unifying_UTXO-based,
   author       = {Joachim Zahnentferner},
   title        = {Chimeric Ledgers: Translating and Unifying UTXO-based and Account-based Cryptocurrencies},
@@ -216,6 +373,7 @@
   year         = {2018},
   note         = {\url{https://ia.cr/2018/262}}
 }
+
 @article{UTxO_Lars,
   author     = {Lars Br{\"{u}}njes and
                 Murdoch James Gabbay},
@@ -230,19 +388,20 @@
   biburl     = {https://dblp.org/rec/journals/corr/abs-2003-14271.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
-@book{fowler2010dsl,
-  title     = {Domain-specific languages},
-  author    = {Fowler, Martin},
-  year      = {2010},
-  publisher = {Pearson Education}
+
+@inproceedings{Z3,
+  author    = {de Moura, Leonardo
+               and Bj{\o}rner, Nikolaj},
+  editor    = {Ramakrishnan, C. R.
+               and Rehof, Jakob},
+  title     = {Z3: An Efficient SMT Solver},
+  booktitle = {Tools and Algorithms for the Construction and Analysis of Systems},
+  year      = {2008},
+  doi       = {10.1007/978-3-540-78800-3_24},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {337--340},
+  abstract  = {Satisfiability Modulo Theories (SMT) problem is a decision problem for logical first order formulas with respect to combinations of background theories such as: arithmetic, bit-vectors, arrays, and uninterpreted functions. Z3 is a new and efficient SMT Solver freely available from Microsoft Research. It is used in various software verification and analysis applications.},
+  isbn      = {978-3-540-78800-3}
 }
-@book{plutus-smart-contracts,
-  title     = {Plutus: Writing reliable smart contracts},
-  author    = {Br{\"{u}}njes, Lars and  Vinogradova, Polina},
-  year      = 2019,
-  publisher = {IOHK},
-  url       = {\url{https://leanpub.com/plutus-smart-contracts}},
-  abstract  = {This practical ebook is a guide to programming with the Plutus language for highly secure smart contracts on the Cardano blockchain, home of the ada cryptocurrency. Plutus is based on the Haskell functional programming language and comes complete with a full testing environment accessed via GitHub or any browser.
-               The ebook will help you get to grips with using smart contracts on a blockchain by providing real-life examples and functional sample code. Plutus: Writing Reliable Smart Contracts is the first ebook about this new and exciting language and is written by experts from IOHK, the developers of Cardano and ada.               
-               This ebook is concise and focused and uses sample scenarios to help the reader grasp the concepts of this new language. The pitch and flow of this book makes it appealing and is it easy to navigate through the samples which get progressively more complex.}
-}
+
