Termino de escribir Sledgehammer e Isabelle

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -313,6 +313,22 @@
   doi     = {10.1016/j.entcs.2012.06.009}
 }
 
+@inproceedings{quickcheck_haskell,
+  author    = {Claessen, Koen and Hughes, John},
+  title     = {QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs},
+  year      = {2000},
+  isbn      = {1581132026},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/351240.351266},
+  doi       = {10.1145/351240.351266},
+  abstract  = {Quick Check is a tool which aids the Haskell programmer in formulating and testing properties of programs. Properties are described as Haskell functions, and can be automatically tested on random input, but it is also possible to define custom test data generators. We present a number of case studies, in which the tool was successfully used, and also point out some pitfalls to avoid. Random testing is especially suitable for functional programs because properties can be stated at a fine grain. When a function is built from separately tested components, then random testing suffices to obtain good coverage of the definition under test.},
+  booktitle = {Proceedings of the Fifth ACM SIGPLAN International Conference on Functional Programming},
+  pages     = {268-279},
+  numpages  = {12},
+  series    = {ICFP '00}
+}
+
 @inproceedings{sledgehammer_judgement_day,
   author    = {B{\"o}hme, Sascha
                and Nipkow, Tobias},
@@ -355,6 +371,7 @@
   address   = {Cambridge, MA, USA}
 }
 
+
 @inbook{The_Extended_UTXO_Model,
   author = {Chakravarty, Manuel and Chapman, James and MacKenzie, Kenneth and Melkonian, Orestis and Jones, Michael and Wadler, Philip},
   year   = {2020},
@@ -364,7 +381,6 @@
   isbn   = {978-3-030-54454-6},
   doi    = {10.1007/978-3-030-54455-3_37}
 }
-
 
 @misc{Translating_and_Unifying_UTXO-based,
   author       = {Joachim Zahnentferner},
@@ -404,4 +420,3 @@
   abstract  = {Satisfiability Modulo Theories (SMT) problem is a decision problem for logical first order formulas with respect to combinations of background theories such as: arithmetic, bit-vectors, arrays, and uninterpreted functions. Z3 is a new and efficient SMT Solver freely available from Microsoft Research. It is used in various software verification and analysis applications.},
   isbn      = {978-3-540-78800-3}
 }
-
