Empiezo eccion 'Programando y probando en Isabelle/HOL'

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -277,7 +277,7 @@
 @book{plutus-smart-contracts,
   title        = {Plutus: Writing reliable smart contracts},
   author       = {Br{\"{u}}njes, Lars and  Vinogradova, Polina},
-  year         = 2019,
+  year         = {2019},
   publisher    = {IOHK},
   url          = {\url{https://leanpub.com/plutus-smart-contracts}},
   howpublished = {\url{https://leanpub.com/plutus-smart-contracts}},
@@ -305,10 +305,11 @@
   pages      = {357--388}
 }
 
-@incollection{prog-prove-isabelle,
+@manual{prog-prove-isabelle,
   title     = {Programming and proving in Isabelle/HOL},
   author    = {Nipkow, Tobias},
   booktitle = {Technical report, University of Cambridge},
+  url       = {https://isabelle.in.tum.de/doc/prog-prove.pdf},
   year      = {2013}
 }
 
