--- a/languages.tex
+++ b/languages.tex
@@ -2,3 +2,7 @@
   language     = Haskell,
   morekeywords = {Close, Pay, Assert, If, When, Let},
 }
+\lstdefinelanguage{Isabelle}{%
+  language     = ML,
+  morekeywords = {theory, imports, begin, end},
+}
