Agrego imagen de 'proof status'

--- a/main.tex
+++ b/main.tex
@@ -1055,6 +1055,13 @@ La definición textual de una teoría sigue una sintaxis especifica incluyendo k
 
 En una instalación habitual de Isabelle\footnote{\href{https://isabelle.in.tum.de/}{https://isabelle.in.tum.de/}}, con el cursor en un `lemma' o `theorem', es posible ver en la pestaña `state', los subgoals y estado parcial de nuestra prueba en proceso.
 
+\begin{figure}[H]
+	\centering
+    \includegraphics[width=0.7\textwidth]{Proof_state_isabelle.png}
+	\caption{Pantalla de `status' para una prueba en proceso de la sintaxis de Marlowe.}\label{fig:Proof_state}
+\end{figure}
+
+
 \subsection{Algunos tipos y pruebas básicas}
 
 En esta sección detallaremos los tipos \textit{bool}, \textit{nat} y \textit{list}, los más importantes y utilizados en Isabelle/HOL.\@ Mostremos algunos ejemplos de pruebas sencillas y las probaremos con inducción y simplificación.
