Empiezo desarrollo: Agrego tablas (tech-specs) de COM, CSH y CLM

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -65,6 +65,14 @@
   volume    = {},
   year      = {2020}
 }
+@misc{ACTUS_Dictionary,
+  author       = {ACTUS},
+  howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary.json}},
+  month        = Jun,
+  note         = {Online; accessed 26 May 2022},
+  title        = {ACTUS Dictionary Terms},
+  year         = {2019}
+}
 @misc{ACTUS_Dictionary_Events,
   author       = {ACTUS},
   howpublished = {\url{https://github.com/actusfrf/actus-dictionary/blob/master/actus-dictionary-event-types.json}},
@@ -87,6 +95,7 @@
   title        = {ACTUS Dictionary Terms},
   year         = {2019}
 }
+
 @misc{ACTUS_Taxonomy,
   author       = {ACTUS},
   howpublished = {\url{https://www.actusfrf.org/taxonomy}},
@@ -111,7 +120,6 @@
   title        = {Algebraic data type},
   year         = {2020}
 }
-
 @inproceedings{bhargavan:hal-01400469,
   address     = {Vienna, Austria},
   author      = {Bhargavan, Karthikeyan and Delignat-Lavaud, Antoine and Fournet, C{\'e}dric and Gollamudi, Anitha and Gonthier, Georges and Kobeissi, Nadim and Kulatova, Natalia and Rastogi, Aseem and Sibut-Pinote, Thomas and Swamy, Nikhil and Zanella-B{\'e}guelin, Santiago},
@@ -126,13 +134,13 @@
   url         = {https://hal.inria.fr/hal-01400469},
   year        = {2016}
 }
+
 @misc{cardano_docs,
   author       = {IOHK},
   howpublished = {\url{https://docs.cardano.org/}},
   title        = {Documentation for the Cardano ecosystem},
   year         = {2015}
 }
-
 @misc{cardano_utxo_ledger,
   author = {Corduan, Jared and Vinogradova, Polina and Gudemann, Matthias},
   title  = {A Formal Specification of the Cardano Ledger},
@@ -236,6 +244,16 @@
   publisher = {Springer International Publishing},
   title     = {Marlowe: Implementing and Analysing Financial Contracts on Blockchain},
   year      = {2020}
+}
+
+@misc{marlowe-cardano-github,
+  author       = {IOHK},
+  day          = {13},
+  howpublished = {\url{https://github.com/input-output-hk/marlowe-cardano}},
+  month        = Nov,
+  note         = {Online; accessed 26 May 2022},
+  title        = {Marlowe Cardano Repository},
+  year         = {2016}
 }
 
 @book{ML_programming_language,
